refactor: 게시글 목록 조회시 중복로직 삭제