@@ -43,32 +43,12 @@ public class PostUseCase {
 
     /** 커뮤니티별 게시글 목록 조회 */
     public DataResponse<Page<PostListResponse>> getPostsByCommunity(Long communityId, Pageable pageable) {
-        CommunityEntity community = communityService.findById(communityId);
-        UUID communityOwnerId = community.getUser().getId(); // 커뮤니티 스트리머 ID
-        System.out.println(communityOwnerId + "1");
-        Page<PostEntity> postsPage = postService.getPostsByCommunity(community, pageable);
-        System.out.println(communityOwnerId + "2");
+        Page<PostEntity> postsPage = postService.getPostsByCommunity(communityId, pageable);
         List<PostEntity> posts = new ArrayList<>(postsPage.getContent());
 
-        PostEntity ownerPost = posts.stream()
-                .filter(p -> p.getUser().getId().equals(communityOwnerId))
-                .findFirst()
-                .orElse(null);
-
-        List<PostEntity> otherPosts = posts.stream()
-                .filter(p -> !p.equals(ownerPost))
-                .sorted((p1, p2) -> p2.getCreatedAt().compareTo(p1.getCreatedAt()))
-                .toList();
-
-        List<PostEntity> finalPosts = new ArrayList<>();
-        if (ownerPost != null) {
-            finalPosts.add(ownerPost);
-        }
-        finalPosts.addAll(otherPosts);
-
-        List<PostListResponse> dtoList = finalPosts.stream()
-                .map(PostListResponse::fromEntity)
-                .collect(Collectors.toList());
+        List<PostListResponse> dtoList = posts.stream()
+            .map(PostListResponse::fromEntity)
+            .collect(Collectors.toList());
 
         Pageable newPageable = PageRequest.of(pageable.getPageNumber(), pageable.getPageSize());
         Page<PostListResponse> resultPage = new PageImpl<>(dtoList, newPageable, postsPage.getTotalElements());
